--- a/src/pages/FoodprintStep5.css
+++ b/src/pages/FoodprintStep5.css
@@ -101,12 +101,15 @@
     font-weight: bold;
     font-size: 28px;
     line-height: 35px;
-    margin-top: 40px;
+    margin-top: 60px;
     width: 80%;
 }
 
 .weeklyfoodprint-cards {
     display: flex;
+    justify-content: space-between;
+    margin-top: 10px;
+    width: 80%;
 }
 
 .weeklyfoodprint-impactcard {
@@ -116,7 +119,8 @@
     border-radius: 10px;
     color:  #333333;
     text-align: center;
-    width: 50%;
+    width: 30%;
+    margin-top: 10px;
 }
 
     .impactcard {
@@ -154,7 +158,7 @@
         }
 
     .topthree-section {
-        margin: 20px;
+        margin: 20px 20px 50px 20px;
     }
 
     .topthree-title {
