--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -8,19 +8,25 @@
 .menu {
     display: flex;
     flex-direction: row;
-    justify-content: flex-end;
+    /* justify-content: flex-end; */
     align-items: center;
-    box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    /* box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.25);
     border-radius: 0px 0px 8px 8px;
     background-color: #FFFFFF;
-    width: 900px;
+    width: 900px; */
 }
 
 .logo {
-    display: flex;
+    /* display: flex;
     justify-content: flex-start;
     padding: 10px;
-    margin-right: 200px;
+    margin-right: 200px; */
+    position: absolute;
+    top: 10px;
+    left: 20px;
   }
 
     .logoicon {
@@ -28,6 +34,10 @@
       width: 44px;
       margin-right: 10px;
     }
+
+.white {
+    color: white;
+}
 
 .desktop {
     display: flex;
