--- a/src/pages/FoodprintStep5.css
+++ b/src/pages/FoodprintStep5.css
@@ -228,4 +228,27 @@
 
     .arrow-desktop {
         height: 44px;
+        margin: 30px;
     }
+
+    .foodprint-solution {
+        margin-top: 20px;
+        width: 77%;
+        display: flex;
+        align-items: center;
+        padding: 20px;
+        background: #BB6BD9;
+        border: 1px solid #333333;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+    }
+
+        .foodprint-alternative-title {
+            font-family: Quicksand;
+            font-style: normal;
+            font-weight: bold;
+            font-size: 36px;
+            line-height: 36px;
+            text-align: center;
+            margin: 30px;
+        }
