--- a/src/components/Grams.css
+++ b/src/components/Grams.css
@@ -3,6 +3,10 @@
   justify-content: space-between;
 }
 
+.grams-foodprint {
+  display: flex;
+}
+
 .nutritional-values {
   font-size: 16px;
   line-height: 24px;
