--- a/src/App.css
+++ b/src/App.css
@@ -163,14 +163,24 @@ a:hover {
   text-align: center;
 }
 
-.home-note-bold {
-  display: inline;
-  font-weight: bold;
+.foodprint-note {
+  margin: 30px 20px 120px 20px;
+  font-family: Quicksand;
+  font-style: normal;
+  font-size: 14px;
+  line-height: 17px;
+  text-align: left;
+  width: 1100px;
 }
 
-.home-note-content {
-  display: inline;
-}
+  .note-bold {
+    display: inline;
+    font-weight: bold;
+  }
+
+  .note-content {
+    display: inline;
+  }
 
 /* comparisons */
 
