--- a/src/components/FBShare.css
+++ b/src/components/FBShare.css
@@ -11,6 +11,18 @@
     border-radius: 8px;
     width: 280px;
   }
+  .fb-share-button-foodprint {
+    font-family: 'Quicksand';
+    font-weight: bold;
+    font-size: 14px;
+    line-height: 40px;
+    color: white;
+    background-color: #2F80ED;
+    border: 1px dotted #FFFFFF;
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 8px;
+    width: 280px;
+  }
   
     .fb-share-text {
       color: white;
