--- a/src/pages/FoodprintStep5.css
+++ b/src/pages/FoodprintStep5.css
@@ -233,26 +233,47 @@
 
     .foodprint-solution {
         margin-top: 30px;
-        width: 1070px;
+        width: 1100px;
         display: flex;
         align-items: center;
-        padding: 0px 40px 40px 40px;
+        padding: 0px 20px 20px 20px;
         background: #BB6BD9;
         border: 1px solid #333333;
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
         border-radius: 10px;
     }
 
+    .alternatives-group-foodprint {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
         .foodprint-alternative-title-section {
             width: 300px;
             display: flex;
+            flex-direction: column;
+            align-items: center;
         }
 
-            .foodprint-alternative-title {
-                font-family: Quicksand;
-                font-style: normal;
-                font-weight: bold;
-                font-size: 28px;
-                line-height: 35px;
-                text-align: center;
+            .foodprint-alternative-titleandimage {
+                display: flex;
+                justify-content: center;
             }
+
+                .foodprint-alternative-title {
+                    font-family: Quicksand;
+                    font-style: normal;
+                    font-weight: bold;
+                    font-size: 28px;
+                    line-height: 35px;
+                    text-align: center;
+                }
+            
+            .foodprint-alternative-optimisenutrvalue {
+                display: flex;
+            }
+
+.foodprint-datasource-section {
+    margin: 20px;
+}
