--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -127,6 +127,18 @@
         justify-content: center;
         width: 45%;
       }
+        .alternative-grams-foodprint-nutr {
+          display: flex;
+          flex-direction: column;
+          align-items: center;
+        }
+          .nutrvalue-foodprint-flex {
+            display: flex;
+          }
+            .nutrvalue-foodprint {
+              font-size: 16px;
+              margin-top: -10px;
+            }
 
         .alternative-impact {
             font-size: 23px;
