--- a/src/App.css
+++ b/src/App.css
@@ -44,6 +44,7 @@
   display: flex;
   justify-content: center;
   color: #4F4F4F;
+  margin-bottom: 60px;
 }
 
 .corona {
@@ -101,21 +102,24 @@ body {
   font-family: 'Quicksand';
   font-weight: bold;
   color: white;
-  background: #BB6BD9;
   border: 1px dotted #FFFFFF;
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-  border-radius: 8px;
   font-family: 'Quicksand';
   outline: none;
   transition: 0.2s;
+  background: #BB6BD9;
+  /* border-radius: 8px; */
+  border-radius: 4px;
+  padding: 5px 10px 5px 10px;
 }
 
   .impact-button-impactpage {
-    color: #4F4F4F;
-    background: #F2F2F2;
-    border: 1px dotted #BDBDBD;
+    /* color: white; */
+    background: #9B51E0;
+    /* border: 1px dotted #FFFFFF;
     box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-    border-radius: 8px;
+    border-radius: 4px;
+    padding: 5px 10px 5px 10px; */
   }
 
   .unit-text {
