--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -102,3 +102,39 @@
         color: #FFFFFF;
         margin: 10px;
     }
+
+@media only screen and (max-width: 600px) {
+
+    .foodprint-input{
+        width: 50px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .foodprint-input-more {
+        width: 40px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+
+    .foodprint-input-less {
+        width: 40px;
+        font-size: 16px;
+        line-height: 20px;
+    }
+    
+    .foodprint-measure{
+        font-size: 16px;
+        line-height: 20px;
+    }
+    
+    .foodprint-foodlabel{
+        max-width: 110px;
+        font-size: 16px;
+        line-height: 20px;
+        margin-top: 12px;
+        margin-bottom: 0px;
+    }
+
+
+}
