--- a/src/pages/FoodprintStep5.css
+++ b/src/pages/FoodprintStep5.css
@@ -233,9 +233,10 @@
 
     .foodprint-solution {
         margin-top: 30px;
-        width: 1100px;
+        width: 77%;
         display: flex;
         align-items: center;
+        justify-content: space-between;
         padding: 0px 20px 20px 20px;
         background: #BB6BD9;
         border: 1px solid #333333;
@@ -247,10 +248,12 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        /* width: 70%; */
     }
 
         .foodprint-alternative-title-section {
-            width: 300px;
+            /* width: 20%; */
+            margin-left: 5%;
             display: flex;
             flex-direction: column;
             align-items: center;
@@ -276,4 +279,28 @@
 
 .foodprint-datasource-section {
     margin: 20px;
+}
+
+
+@media only screen and (max-width: 1000px) {
+    
+    .weeklyfoodprint-cards {
+        flex-direction: column;
+        align-items: center;
+        width: 100%;
+    }
+
+    .weeklyfoodprint-impactcard {
+        /* background: #FFFFFF;
+        border: 1px solid #333333;
+        box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 10px;
+        color:  #333333;
+        text-align: center;
+        width: 30%;
+        margin-top: 10px; */
+        margin-top: 20px;
+        width: 80%;
+    }
+
 }
