foodprint responsive more progresses

--- a/src/components/Solution.css
+++ b/src/components/Solution.css
@@ -185,6 +185,17 @@
     width: 750px;
   }
 
+  /* .alternative-foodprint {
+    background-color: #8C3BD9;
+    border-radius: 10px;
+    color: #FFFFFF;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 40px;
+    width: 650px;
+  } */
+
 }
 
 
