--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -127,6 +127,10 @@
         font-size: 16px;
         line-height: 20px;
     }
+
+    .foodprint-measure-text{
+        margin-top: 14px;
+    }
     
     .foodprint-foodlabel{
         max-width: 110px;
