--- a/src/components/Form.css
+++ b/src/components/Form.css
@@ -18,7 +18,8 @@
     max-width: 840px;
     margin-right: 20px;
     margin-left: 20px;
-    background: #BB6BD9;
+    /* background: #BB6BD9; */
+    background-color: #F2F2F2;
     border-radius: 20px;
     padding: 20px;
 }
