--- a/src/pages/Fooprint.css
+++ b/src/pages/Fooprint.css
@@ -6,6 +6,7 @@
 
 .step0-background {
     background-color: #9B51E0;
+    padding-bottom: 200px;
 }
 
 .step1-background {
@@ -113,10 +114,8 @@
 .wizard-buttons {
     width: 100%;
     height: 74px;
-    /* background: #27AE60; */
     box-shadow: 0px -4px 12px rgba(0, 0, 0, 0.1);
     display: flex;
-    /* justify-content: space-around; */
     justify-content: space-evenly;
     position: fixed;
     bottom: 0;
@@ -256,7 +255,7 @@
     }    
 
     .foodprint-intro {
-        width: 80%;
+        width: 90%;
     }
 
     .foodprint-calltoaction {
@@ -266,6 +265,18 @@
     .foodprint-calltoaction {
         font-size: 20px;
         line-height: 30px;
+    }
+
+    .wizard-buttons {
+        height: 84px;
+    }
+
+    .foodprint-back {
+        font-size: 16px;
+    }
+
+    .foodprint-next {
+        font-size: 16px;
     }
 
 }
