--- a/src/pages/Fooprint.css
+++ b/src/pages/Fooprint.css
@@ -27,7 +27,7 @@
 
 .foodprint-step0-alignment {
     display: flex;
-    margin-top: 200px;
+    padding-top: 200px;
     justify-content: center;
     flex-wrap: wrap;
 }
@@ -47,7 +47,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 50px;
+    padding-top: 50px;
 }
 
 .foodprint-intro {
@@ -214,7 +214,7 @@
 @media only screen and (max-width: 966px) {
 
     .foodprint-step0-alignment {
-        margin-top: 120px;
+        padding-top: 120px;
     }
 
     .foodprint-start {
