--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -17,6 +17,7 @@
         background: #FFFFFF;
         box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
         border: 0px;
+        margin: 0; 
     }
 
     /* removing the input number default increment buttons from Chrome */
@@ -38,7 +39,7 @@
         font-style: normal;
         font-weight: normal;
         font-size: 30px;
-        line-height: 37px;
+        line-height: 20px;
         text-align: center;
         text-transform: uppercase;
         color: #444444;
@@ -55,7 +56,7 @@
         font-style: normal;
         font-weight: normal;
         font-size: 30px;
-        line-height: 37px;
+        line-height: 20px;
         text-align: center;
         text-transform: uppercase;
         color: #444444;
