--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -111,7 +111,7 @@
         font-size: 16px;
         line-height: 20px;
         border-radius: 0px 0px 0px 0px;
-        height: 46px;
+        /* height: 46px;  remove this line if it doesn't solve the safari issue */
     }
 
     .foodprint-input-more {
