--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -107,7 +107,8 @@
 @media only screen and (max-width: 600px) {
 
     .foodprint-input{
-        width: 50px;
+        /* width: 50px; */
+        width: 40px;
         font-size: 16px;
         line-height: 20px;
         border-radius: 0px 0px 0px 0px;
