--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -107,12 +107,11 @@
 @media only screen and (max-width: 600px) {
 
     .foodprint-input{
-        /* width: 50px; */
-        width: 40px;
+        width: 50px;
         font-size: 16px;
         line-height: 20px;
         border-radius: 0px 0px 0px 0px;
-        /* height: 46px;  remove this line if it doesn't solve the safari issue */
+        height: 40px;  /* should be 46px remove this line if it doesn't solve the safari issue */ 
     }
 
     .foodprint-input-more {
