safari input with exact height of less and more

--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -118,12 +118,14 @@
         width: 40px;
         font-size: 16px;
         line-height: 20px;
+        height: 48px;
     }
 
     .foodprint-input-less {
         width: 40px;
         font-size: 16px;
         line-height: 20px;
+        height: 48px;
     }
     
     .foodprint-measure{
