--- a/src/components/FoodprintForm.css
+++ b/src/components/FoodprintForm.css
@@ -113,7 +113,7 @@
         border-radius: 0px 0px 0px 0px;
         margin: 0px;
         padding: 1px;
-        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        box-shadow: 0 4px 2px -2px rgba(0, 0, 0, 0.25);
     }
 
     .foodprint-input-more {
